[gd_scene load_steps=3 format=3 uid="uid://cwfy2pt8mernf"]

[ext_resource type="Script" path="res://assets/Scripts/Menus/SelecionarSlime.gd" id="1_34gpu"]
[ext_resource type="Theme" uid="uid://b6qrpj5c8om28" path="res://assets/Mini FX, Items & UI/menu_theme.tres" id="1_vb47j"]

[node name="SelecionarUsuario" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vb47j")
script = ExtResource("1_34gpu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.858824, 0.831373, 0.780392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your slime's class:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Ranger" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "	Ranger"

[node name="Guerreiro" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Warrior"

[node name="Mago" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wizard"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "return to previous menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Ranger" to="." method="_on_ranger_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Guerreiro" to="." method="_on_guerreiro_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Mago" to="." method="_on_mago_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
